--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       color: var(--text-color);
     }
 
-    .lunch-section.hidden {
+    .section.hidden {
       display: none;
     }
   </style>
@@ -127,6 +127,7 @@
 
   <div class="container">
     <h1>Wage Tracker</h1>
+
     <label for="wage">Hourly Wage ($)</label>
     <input type="number" step="0.01" id="wage" placeholder="e.g. 20.40">
 
@@ -140,12 +141,20 @@
       <input type="checkbox" id="disableLunch"> Disable Lunch Break
     </label>
 
-    <div class="lunch-section" id="lunchSection">
+    <div class="section" id="lunchSection">
       <label for="lunchStart">Lunch Break Start</label>
       <input type="time" id="lunchStart">
-
       <label for="lunchEnd">Lunch Break End</label>
       <input type="time" id="lunchEnd">
+    </div>
+
+    <label>
+      <input type="checkbox" id="enableTips"> Enable Tips
+    </label>
+
+    <div class="section hidden" id="tipsSection">
+      <label for="tipAmount">Total Tips ($)</label>
+      <input type="number" step="0.01" id="tipAmount" placeholder="e.g. 15.00">
     </div>
 
     <div class="buttons">
@@ -166,16 +175,21 @@
       const lunchStartInput = document.getElementById("lunchStart");
       const lunchEndInput = document.getElementById("lunchEnd");
 
+      const tipAmountInput = document.getElementById("tipAmount");
+
       const startButton = document.getElementById("start");
       const stopButton = document.getElementById("stop");
-      const themeToggle = document.getElementById("themeToggle");
 
       const disableLunchCheckbox = document.getElementById("disableLunch");
       const lunchSection = document.getElementById("lunchSection");
 
+      const enableTipsCheckbox = document.getElementById("enableTips");
+      const tipsSection = document.getElementById("tipsSection");
+
+      const themeToggle = document.getElementById("themeToggle");
+
       let intervalId = null;
 
-      // Theme Logic
       function setTheme(dark) {
         document.body.classList.toggle("dark", dark);
         localStorage.setItem("theme", dark ? "dark" : "light");
@@ -191,9 +205,13 @@
         setTheme(!isDark);
       });
 
-      // Show/hide lunch inputs
+      // Toggle sections
       disableLunchCheckbox.addEventListener("change", () => {
         lunchSection.classList.toggle("hidden", disableLunchCheckbox.checked);
+      });
+
+      enableTipsCheckbox.addEventListener("change", () => {
+        tipsSection.classList.toggle("hidden", !enableTipsCheckbox.checked);
       });
 
       function parseTimeToDate(timeStr) {
@@ -205,9 +223,7 @@
 
       function getEffectiveWorkedTime(now, start, end, lunchStart, lunchEnd, includeLunch) {
         if (now < start) return 0;
-        if (now >= end) {
-          return end - start - (includeLunch ? (lunchEnd - lunchStart) : 0);
-        }
+        if (now >= end) return end - start - (includeLunch ? (lunchEnd - lunchStart) : 0);
 
         let worked = now - start;
 
@@ -234,11 +250,20 @@
         const end = parseTimeToDate(endInput.value);
 
         const includeLunch = !disableLunchCheckbox.checked;
+        const includeTips = enableTipsCheckbox.checked;
+
         const lunchStart = includeLunch ? parseTimeToDate(lunchStartInput.value) : null;
         const lunchEnd = includeLunch ? parseTimeToDate(lunchEndInput.value) : null;
 
         const effectiveMs = getEffectiveWorkedTime(now, start, end, lunchStart, lunchEnd, includeLunch);
-        const earnings = (wage / 3600000) * effectiveMs;
+        let earnings = (wage / 3600000) * effectiveMs;
+
+        if (includeTips) {
+          const tips = parseFloat(tipAmountInput.value);
+          if (!isNaN(tips) && tips > 0) {
+            earnings += tips;
+          }
+        }
 
         if (now >= end && intervalId !== null) {
           clearInterval(intervalId);
@@ -258,7 +283,13 @@
 
         const includeLunch = !disableLunchCheckbox.checked;
         if (includeLunch && (!lunchStartInput.value || !lunchEndInput.value)) {
-          alert("Please fill in lunch break times or disable it.");
+          alert("Please fill in lunch times or disable it.");
+          return;
+        }
+
+        const includeTips = enableTipsCheckbox.checked;
+        if (includeTips && (!tipAmountInput.value || parseFloat(tipAmountInput.value) < 0)) {
+          alert("Please enter a valid tip amount or disable tips.");
           return;
         }
 
